Collapsing field when no author fixed

--- a/client/src/assets/scss/src/content-details.scss
+++ b/client/src/assets/scss/src/content-details.scss
@@ -165,6 +165,8 @@
                     }
                     a {
                         font-weight: bold;
+                        min-height: 1.5rem;
+                        display: block;
                     }
                 }
             }
